--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -411,12 +411,13 @@ C_DNS_EXTERNE_ASSOCIATION:
     arguments:
       -H: $hostname$
       -c: '500'
-      -a: $HOSTADDRESS$
+      -a: $dns_address$
       -s: $dnsserver$
       -t: '8'
       -w: '50'
     command: "PluginDir + \"/check_dns\""
     vars.dnsserver: "8.8.8.8"
+    vars.dns_address: $HOSTADDRESS$
     import: ["C_BASE"]
 C_HTTPS_OPENID_REDIRECT:
   attrs:
