--- a/ansible/roles/makinastates_upgrade/tasks/main.yml
+++ b/ansible/roles/makinastates_upgrade/tasks/main.yml
@@ -5,11 +5,18 @@
   shell: |
     set -ex
     cd "{{makinastates_dest}}"
-    bin/boot-salt.sh \
-        {% if makinastates_minion_id %}-m "{{makinastates_minion_id}}" {% endif %}\
-        {% if makinastates_nodetype %}-n "{{makinastates_nodetype}}" {% endif %}\
-        {% if makinastates_version %}-b "{{makinastates_version}}" {% endif %}\
-        {% if makinastates_salt_version %}--salt-branch "{{makinastates_salt_version}}" {% endif %}\
-        {% if makinastates_ansible_version %}--ansible-branch "{{makinastates_ansible_version}}" {% endif %}\
-        -C --reconfigure
-    bin/boot-salt.sh --synchronize-code
+    if [ -e bin/boot-salt2.sh ];then
+      sc="bin/boot-salt2.sh"
+      c_args=""
+    else
+      sc="bin/boot-salt.sh"
+      c_args="{% if makinastates_nodetype %}-n "{{makinastates_nodetype}}" {% endif %}"
+    fi
+    "$sc" \
+          ${c_args} \
+          {% if makinastates_minion_id %}-m "{{makinastates_minion_id}}" {% endif %}\
+          {% if makinastates_version %}-b "{{makinastates_version}}" {% endif %}\
+          {% if makinastates_salt_version %}--salt-branch "{{makinastates_salt_version}}" {% endif %}\
+          {% if makinastates_ansible_version %}--ansible-branch "{{makinastates_ansible_version}}" {% endif %}\
+          -C --reconfigure
+    "$sc" --synchronize-code
