--- a/ansible/roles/makinastates_vars/defaults/main.yml
+++ b/ansible/roles/makinastates_vars/defaults/main.yml
@@ -10,4 +10,7 @@ makinastates_salt_version: null
 makinastates_nodetype: null
 makinastates_force_highstate: null
 makinastates_minion_id: null
+makinastates_install_crons: true
+makinastates_install_logrotate: true
+makinastates_install_system_links: true
 salt_pillar: {"makinastates_from_ansible": true}
