--- a/ansible/roles/ms_services_base_ntpd/defaults/main.yml
+++ b/ansible/roles/ms_services_base_ntpd/defaults/main.yml
@@ -12,7 +12,7 @@
 ]
 'ms_ntp_restrict': []
 'ms_ntp_default_all': True
-'ms_ntp_activated': None
+'ms_ntp_activated': True
 'ms_ntp_block_ext': False
 'ms_ntp_ignore': False
 'ms_ntp_kod': True
