handle non-root user for salt

--- a/etc/salt/minion.d/00_global.conf
+++ b/etc/salt/minion.d/00_global.conf
@@ -63,7 +63,7 @@ retry_dns: 30
 master_port: 4506
 
 # The user to run salt
-user: root
+# user: root
 
 # The root directory prepended to these options: pki_dir, cachedir, log_file,
 # sock_dir, pidfile.
