Revert "templates in formular"
This reverts commit 52975a96984814369a0aa918c0dba7e37ccf93b0.

--- a/ansible/roles/ms_localsettings_apparmor/tasks/main.yml
+++ b/ansible/roles/ms_localsettings_apparmor/tasks/main.yml
@@ -13,7 +13,7 @@
 - name: apparmor_ntp_patch-transfer
   tags: ms_localsettings_apparmor
   copy:
-    src: "templates/usr.sbin.ntpd.patch"
+    src: "../../../../files/etc/apparmor.d/usr.sbin.ntpd.patch"
     dest: /tmp/apparmor.patch
   when: "apparmor_ntp_patch.rc==0"
 - name: apparmor_ntp_patch-apply
@@ -40,7 +40,7 @@
 - name: apparmor_ntp_patch-transfer2
   tags: ms_localsettings_apparmor
   copy:
-    src: "templates/usr.sbin.ntpd.perms.patch"
+    src: "../../../../files/etc/apparmor.d/usr.sbin.ntpd.perms.patch"
     dest: /tmp/apparmor.patch
   when: "apparmor_ntp_patch2.rc==0"
 - name: apparmor_ntp_patch-apply
