--- a/ansible/roles/makinastates_lxc_create/templates/lxc.conf
+++ b/ansible/roles/makinastates_lxc_create/templates/lxc.conf
@@ -15,71 +15,80 @@ lxc.network.type = veth
 lxc.network.name = eth0
 lxc.network.flags = up
 {{(lxc_eth0_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth0_bridge), '#')}}
-{{(lxc_eth0_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth0_gateway), '#')}}
+{{(lxc_eth0_gateway)|ternary('lxc.network.ipv4.gateway = {0}'.format(lxc_eth0_gateway), '#')}}
 {{(lxc_eth0_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth0_mac), '#')}}
 
+{{(lxc_eth1_mac or lxc_eth1_ip or lxc_eth1_bridge)|ternary('lxc.network.type = veth', '#')}}
 {{(lxc_eth1_mac or lxc_eth1_ip or lxc_eth1_bridge)|ternary('lxc.network.name = eth1', '#')}}
 {{(lxc_eth1_mac or lxc_eth1_ip or lxc_eth1_bridge)|ternary('lxc.network.flags = up', '#')}}
 {{(lxc_eth1_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth1_bridge), '#')}}
 {{(lxc_eth1_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth1_mac), '#')}}
 {{(lxc_eth1_ip)|ternary('lxc.network.ipv4 = {0}'.format(lxc_eth1_ip), '#')}}
-{{((lxc_eth1_mac or lxc_eth1_ip or lxc_eth1_bridge) and lxc_eth1_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth1_gateway), '#')}}
+{{((lxc_eth1_mac or lxc_eth1_ip or lxc_eth1_bridge) and lxc_eth1_gateway)|ternary('lxc.network.ipv4.gateway = {0}'.format(lxc_eth1_gateway), '#')}}
 
+{{(lxc_eth2_mac or lxc_eth2_ip or lxc_eth2_bridge)|ternary('lxc.network.type = veth', '#')}}
 {{(lxc_eth2_mac or lxc_eth2_ip or lxc_eth2_bridge)|ternary('lxc.network.name = eth2', '#')}}
 {{(lxc_eth2_mac or lxc_eth2_ip or lxc_eth2_bridge)|ternary('lxc.network.flags = up', '#')}}
 {{(lxc_eth2_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth2_bridge), '#')}}
 {{(lxc_eth2_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth2_mac), '#')}}
 {{(lxc_eth2_ip)|ternary('lxc.network.ipv4 = {0}'.format(lxc_eth2_ip), '#')}}
-{{((lxc_eth2_mac or lxc_eth2_ip or lxc_eth2_bridge) and lxc_eth2_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth2_gateway), '#')}}
+{{((lxc_eth2_mac or lxc_eth2_ip or lxc_eth2_bridge) and lxc_eth2_gateway)|ternary('lxc.network.ipv4.gateway = {0}'.format(lxc_eth2_gateway), '#')}}
 
+{{(lxc_eth3_mac or lxc_eth3_ip or lxc_eth3_bridge)|ternary('lxc.network.type = veth', '#')}}
 {{(lxc_eth3_mac or lxc_eth3_ip or lxc_eth3_bridge)|ternary('lxc.network.name = eth3', '#')}}
 {{(lxc_eth3_mac or lxc_eth3_ip or lxc_eth3_bridge)|ternary('lxc.network.flags = up', '#')}}
 {{(lxc_eth3_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth3_bridge), '#')}}
 {{(lxc_eth3_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth3_mac), '#')}}
 {{(lxc_eth3_ip)|ternary('lxc.network.ipv4 = {0}'.format(lxc_eth3_ip), '#')}}
-{{((lxc_eth3_mac or lxc_eth3_ip or lxc_eth3_bridge) and lxc_eth3_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth3_gateway), '#')}}
+{{((lxc_eth3_mac or lxc_eth3_ip or lxc_eth3_bridge) and lxc_eth3_gateway)|ternary('lxc.network.ipv4.gateway = {0}'.format(lxc_eth3_gateway), '#')}}
 
+{{(lxc_eth4_mac or lxc_eth4_ip or lxc_eth4_bridge)|ternary('lxc.network.type = veth', '#')}}
 {{(lxc_eth4_mac or lxc_eth4_ip or lxc_eth4_bridge)|ternary('lxc.network.name = eth4', '#')}}
 {{(lxc_eth4_mac or lxc_eth4_ip or lxc_eth4_bridge)|ternary('lxc.network.flags = up', '#')}}
 {{(lxc_eth4_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth4_bridge), '#')}}
 {{(lxc_eth4_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth4_mac), '#')}}
 {{(lxc_eth4_ip)|ternary('lxc.network.ipv4 = {0}'.format(lxc_eth4_ip), '#')}}
-{{((lxc_eth4_mac or lxc_eth4_ip or lxc_eth4_bridge) and lxc_eth4_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth4_gateway), '#')}}
+{{((lxc_eth4_mac or lxc_eth4_ip or lxc_eth4_bridge) and lxc_eth4_gateway)|ternary('lxc.network.ipv4.gateway = {0}'.format(lxc_eth4_gateway), '#')}}
 
+{{(lxc_eth5_mac or lxc_eth5_ip or lxc_eth5_bridge)|ternary('lxc.network.type = veth', '#')}}
 {{(lxc_eth5_mac or lxc_eth5_ip or lxc_eth5_bridge)|ternary('lxc.network.name = eth5', '#')}}
 {{(lxc_eth5_mac or lxc_eth5_ip or lxc_eth5_bridge)|ternary('lxc.network.flags = up', '#')}}
 {{(lxc_eth5_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth5_bridge), '#')}}
 {{(lxc_eth5_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth5_mac), '#')}}
 {{(lxc_eth5_ip)|ternary('lxc.network.ipv4 = {0}'.format(lxc_eth5_ip), '#')}}
-{{((lxc_eth5_mac or lxc_eth5_ip or lxc_eth5_bridge) and lxc_eth5_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth5_gateway), '#')}}
+{{((lxc_eth5_mac or lxc_eth5_ip or lxc_eth5_bridge) and lxc_eth5_gateway)|ternary('lxc.network.ipv4.gateway = {0}'.format(lxc_eth5_gateway), '#')}}
 
+{{(lxc_eth6_mac or lxc_eth6_ip or lxc_eth6_bridge)|ternary('lxc.network.type = veth', '#')}}
 {{(lxc_eth6_mac or lxc_eth6_ip or lxc_eth6_bridge)|ternary('lxc.network.name = eth6', '#')}}
 {{(lxc_eth6_mac or lxc_eth6_ip or lxc_eth6_bridge)|ternary('lxc.network.flags = up', '#')}}
 {{(lxc_eth6_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth6_bridge), '#')}}
 {{(lxc_eth6_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth6_mac), '#')}}
 {{(lxc_eth6_ip)|ternary('lxc.network.ipv4 = {0}'.format(lxc_eth6_ip), '#')}}
-{{((lxc_eth6_mac or lxc_eth6_ip or lxc_eth6_bridge) and lxc_eth6_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth6_gateway), '#')}}
+{{((lxc_eth6_mac or lxc_eth6_ip or lxc_eth6_bridge) and lxc_eth6_gateway)|ternary('lxc.network.ipv4.gateway = {0}'.format(lxc_eth6_gateway), '#')}}
 
+{{(lxc_eth7_mac or lxc_eth7_ip or lxc_eth7_bridge)|ternary('lxc.network.type = veth', '#')}}
 {{(lxc_eth7_mac or lxc_eth7_ip or lxc_eth7_bridge)|ternary('lxc.network.name = eth7', '#')}}
 {{(lxc_eth7_mac or lxc_eth7_ip or lxc_eth7_bridge)|ternary('lxc.network.flags = up', '#')}}
 {{(lxc_eth7_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth7_bridge), '#')}}
 {{(lxc_eth7_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth7_mac), '#')}}
 {{(lxc_eth7_ip)|ternary('lxc.network.ipv4 = {0}'.format(lxc_eth7_ip), '#')}}
-{{((lxc_eth7_mac or lxc_eth7_ip or lxc_eth7_bridge) and lxc_eth7_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth7_gateway), '#')}}
+{{((lxc_eth7_mac or lxc_eth7_ip or lxc_eth7_bridge) and lxc_eth7_gateway)|ternary('lxc.network.ipv4.gateway = {0}'.format(lxc_eth7_gateway), '#')}}
 
+{{(lxc_eth8_mac or lxc_eth8_ip or lxc_eth8_bridge)|ternary('lxc.network.type = veth', '#')}}
 {{(lxc_eth8_mac or lxc_eth8_ip or lxc_eth8_bridge)|ternary('lxc.network.name = eth8', '#')}}
 {{(lxc_eth8_mac or lxc_eth8_ip or lxc_eth8_bridge)|ternary('lxc.network.flags = up', '#')}}
 {{(lxc_eth8_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth8_bridge), '#')}}
 {{(lxc_eth8_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth8_mac), '#')}}
 {{(lxc_eth8_ip)|ternary('lxc.network.ipv4 = {0}'.format(lxc_eth8_ip), '#')}}
-{{((lxc_eth8_mac or lxc_eth8_ip or lxc_eth8_bridge) and lxc_eth8_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth8_gateway), '#')}}
+{{((lxc_eth8_mac or lxc_eth8_ip or lxc_eth8_bridge) and lxc_eth8_gateway)|ternary('lxc.network.ipv4.gateway = {0}'.format(lxc_eth8_gateway), '#')}}
 
+{{(lxc_eth9_mac or lxc_eth9_ip or lxc_eth9_bridge)|ternary('lxc.network.type = veth', '#')}}
 {{(lxc_eth9_mac or lxc_eth9_ip or lxc_eth9_bridge)|ternary('lxc.network.name = eth9', '#')}}
 {{(lxc_eth9_mac or lxc_eth9_ip or lxc_eth9_bridge)|ternary('lxc.network.flags = up', '#')}}
 {{(lxc_eth9_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth9_bridge), '#')}}
 {{(lxc_eth9_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth9_mac), '#')}}
 {{(lxc_eth9_ip)|ternary('lxc.network.ipv4 = {0}'.format(lxc_eth9_ip), '#')}}
-{{((lxc_eth9_mac or lxc_eth9_ip or lxc_eth9_bridge) and lxc_eth9_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth9_gateway), '#')}}
+{{((lxc_eth9_mac or lxc_eth9_ip or lxc_eth9_bridge) and lxc_eth9_gateway)|ternary('lxc.network.ipv4.gateway = {0}'.format(lxc_eth9_gateway), '#')}}
 
 # include any extra, and non managed configuration
 lxc.include = {{lxc_path}}/{{lxc_container_name}}/manual_lxc.conf
