fix redis systemd

--- a/files/etc/systemd/system/redis-server.service.d/redis-server.conf
+++ b/files/etc/systemd/system/redis-server.service.d/redis-server.conf
@@ -1,4 +1,5 @@
 [Service]
+Type=simple
 #ExecStartPre=/bin/mkdir -p /var/run/redis
 #ExecStartPre=/bin/chown -R redis:redis /var/run/redis
 #ExecReload=/bin/kill -USR2 $MAINPID
