salt formula refactor

--- a/files/etc/salt/master.d/00_global.conf
+++ b/files/etc/salt/master.d/00_global.conf
@@ -408,7 +408,7 @@ ext_pillar:
 
 # If this master will be running a salt syndic daemon, syndic_master tells
 # this master where to receive commands from.
-{{syndic_pref}}{{ get_config('syndic_master', 'mastersalt.company.net') }}
+{{syndic_pref}}{{ get_config('syndic_master', 'salt.company.net') }}
 
 # This is the 'ret_port' of the MasterOfMaster
 {{syndic_pref}}{{ get_config('syndic_master_port', '4506') }}
