--- a/files/etc/logrotate.d/salt.conf
+++ b/files/etc/logrotate.d/salt.conf
@@ -1,6 +1,5 @@
 # MANAGED VIA SALT
-{% set salt_data = salt['mc_salt.settings']().data_mappings[service_name][salt_mode] %}
-{{salt_data['msr']}}/.bootlogs/boot_salt_cmd
+{% set salt_data = salt['mc_salt.settings']() %}
 {{salt_data['log_prefix']}}/{{salt_data['name']}}-syndic
 {{salt_data['log_prefix']}}/{{salt_data['name']}}-master
 {{salt_data['log_prefix']}}/{{salt_data['name']}}-minion
