rsyslog conf fix

--- a/files/etc/rsyslog.conf
+++ b/files/etc/rsyslog.conf
@@ -25,7 +25,9 @@ $ModLoad imuxsock # provides support for local system logging
 
 # Enable non-kernel facility klog messages
 {% if grains['oscodename'] not in ['precise'] %}
+{% if data.kernel_log %}
 $KLogPermitNonKernelFacility on
+{% endif %}
 {% endif %}
 
 ###########################
