pillar_cache: off

--- a/files/etc/salt/master.d/00_global.conf
+++ b/files/etc/salt/master.d/00_global.conf
@@ -25,6 +25,16 @@
 # from master.d/*.conf (master.d is a directory in the same directory
 # as the main master config file)
 # {{ get_config('default_include', 'master.d/*.conf') }}
+#
+# A master can cache pillars locally to bypass the expense of having to render them
+# for each minion on every request. This feature should only be enabled in cases
+# where pillar rendering time is known to be unsatisfactory and any attendent security
+# concerns about storing pillars in a master cache have been addressed.
+#
+# When enabling this feature, be certain to read through the additional pillar_cache_*
+# configuration options to fully understand the tuneable parameters and their implications.
+#
+#pillar_cache: False
 
 # The address of the interface to bind to
 {{ get_config('interface', '127.0.0.1') }}
