--- a/files/etc/salt/minion.d/00_global.conf
+++ b/files/etc/salt/minion.d/00_global.conf
@@ -17,6 +17,16 @@
 {%- endmacro %}
 ##### Primary configuration settings #####
 ##########################################
+#
+# A master can cache pillars locally to bypass the expense of having to render them
+# for each minion on every request. This feature should only be enabled in cases
+# where pillar rendering time is known to be unsatisfactory and any attendent security
+# concerns about storing pillars in a master cache have been addressed.
+#
+# When enabling this feature, be certain to read through the additional pillar_cache_*
+# configuration options to fully understand the tuneable parameters and their implications.
+#
+pillar_cache: False
 
 # Per default the minion will automatically include all config files
 # from minion.d/*.conf (minion.d is a directory in the same directory
