--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,62 +1,57 @@
-
 # reqs that need te be taken with care
-sphinx-rtd-theme == 0.1.7
-requests >= 2.5.3
+pip >= 1.5.6
 six >= 1.9.0
+chardet >= 2.3.0
+ordereddict >= 1.1
 
-# regular dependencies
+Jinja2 >= 2.7.3
+markupsafe >= 0.23
+
+pytz >= 2014.9
+timelib >= 0.2.4
+
+iniparse >= 0.4
+
+tornado >= 4.0
+futures >= 2.0
+async >= 0.6.2
+enum34 >= 1.0.4
+
+certifi >= 14.05.14
+cryptography >= 0.8
+pycrypto >= 2.6.1
+pyOpenSSL >= 0.15.1
+
+requests >= 2.5.3
+urllib3 >= 1.10.1
+backports.ssl-match-hostname >= 3.4.0.2
+ndg-httpsclient >= 0.3.3
+pyasn1 >= 0.1.7
+
 alabaster >= 0.7.2
 apache-libcloud >= 0.17.0
 astroid >= 1.2.1
-async >= 0.6.2
-Babel >= 1.3
-backports.ssl-match-hostname >= 3.4.0.2
-certifi >= 14.05.14
 cffi >= 0.9.1
-chardet >= 2.3.0
 colorlog >= 2.6.0
-cryptography >= 0.8
-dnspython >= 1.12.0
-docutils >= 0.11
-enum34 >= 1.0.4
+
 gitdb >= 0.6.4
 GitPython >= 0.3.6
-iniparse >= 0.4
+
 ipaddr >= 2.1.11
 ipwhois >= 0.10.1
-Jinja2 >= 2.7.3
-logilab-astng >= 0.24.3
-logilab-common >= 0.63.0
-markupsafe >= 0.23
-mccabe >= 0.2.1
-mock >= 1.0.1
-msgpack-python >= 0.4.6
-ndg-httpsclient >= 0.3.3
+dnspython >= 1.12.0
 netaddr >= 0.7.13
-nose >= 1.3.4
-ordereddict >= 1.1
-Paste >= 1.7.5.1
-PasteDeploy >= 1.5.0
-PasteScript >= 1.7.5
-pep8 >= 1.5.7
-pip >= 1.5.6
-pyasn1 >= 0.1.7
+
+msgpack-python >= 0.4.6
+
 pycparser >= 2.10
-pycrypto >= 2.6.1
-pygments >= 2.0.2
-pylama >= 6.1.1
 pylibmc >= 1.4.1
-pylint >= 0.28
-pyOpenSSL >= 0.15.1
-pyprof2calltree >= 1.3.2
-pytz >= 2014.9
 PyYAML >= 3.11
 pyzmq >= 14.5.0
 smmap >= 0.9.0
 snowballstemmer >= 1.2.0
-sphinx >= 1.3
-timelib >= 0.2.4
-urllib3 >= 1.10.1
 
-tornado >= 4.0
-futures >= 2.0
+pyprof2calltree >= 1.3.2
+
+# ansible
+paramiko
