supervisor -- refresh -- 2ndround

--- a/files/etc/init/ms_supervisor.conf
+++ b/files/etc/init/ms_supervisor.conf
@@ -1,8 +1,7 @@
 # MANAGED VIA SALT, DO NOT EDIT
-{% set data = salt['mc_utils.json_load'](data) %}
 console output
 start on filesystem and net-device-up IFACE=lo
 stop on shutdown
 script
-/etc/ms_supervisor.sh
+/usr/bin/ms_supervisor.sh
 end script
