PHP-FPM: fix some settings for opcache.ini  * activate opcache in opcache.ini file, memory conumption can also be defined only there  * store comments in opcache by default, may avoid problems with php annotations

--- a/files/etc/php5/mods-available/opcache.ini
+++ b/files/etc/php5/mods-available/opcache.ini
@@ -1,6 +1,7 @@
+{% set phpSettings = salt['mc_php.settings']() %}
 ; configuration for php ZendOpcache module
 ; priority=05
 zend_extension=opcache.so
-opcache.enable={{enable}}
-opcache.enable_cli={{enable_cli}}
-
+opcache.enable={{phpSettings.opcache_enabled}}
+opcache.enable_cli={{phpSettings.opcache_enable_cli}}
+opcache.memory_consumption={{phpSettings.opcache_memory_consumption}}
