Haproxy packaging refactor includ. circus managmt

--- a/files/etc/haproxy/cfg.d/dispatchers.cfg
+++ b/files/etc/haproxy/cfg.d/dispatchers.cfg
@@ -1,20 +1,19 @@
 # MANAGED VIA SALT DO NOT EDIT
 {% set settings = salt['mc_haproxy.settings']() %}
-{% for id, data in settings.backends.items() %}
+{% for id, data in settings.dispatchers.items() %}
 {% set name = data.get('name', id) %}
-backend {{name}}
+listen {{name}} {{data.uri}}
     log {{data.get('log', 'global')}}
-    mode {{data.get('mode', 'http')}}
 {% for opt in data.get('raw_opts', []) %}
-{%- for optname in ['log', 'mode'] %}
-{%- if opt.strip().startswith(optname + ' ') %} 
+{%- for optname in ['log'] %}
+{%- if opt.strip().startswith(optname + ' ') %}
 {%- set opt = '' %}
 {%- endif %}
 {%- endfor %}
 {%  if opt %}    {{opt}}{%endif%}
 {%- endfor %}
-{% for srv in data.get('servers', []) %}
-    server {{ srv.name }} {{srv.bind}} {{srv.opts-}}
+{% for disp in data.uris %}
+    dispatch {{disp-}}
 {% endfor %}
 
 {% endfor %}
