--- a/files/etc/haproxy/cfg.d/frontends.cfg
+++ b/files/etc/haproxy/cfg.d/frontends.cfg
@@ -6,7 +6,7 @@ frontend {{name}}
     log {{data.get('log', 'global')}}
     bind {{data.bind}}
     mode {{data.get('mode', 'http')}}
-{% for opt in data.get('raw_opts', []) %}
+{% for opt in salt['mc_haproxy.ordered_frontend_opts'](data.get('raw_opts', [])) %}
 {%- for optname in ['log', 'bind', 'mode'] %}
 {%- if opt.strip().startswith(optname + ' ') %}
 {%- set opt = '' %}
@@ -14,5 +14,4 @@ frontend {{name}}
 {%- endfor %}
 {% if opt %}    {{opt}}{%endif%}
 {%- endfor %}
-
 {% endfor %}
