--- a/files/etc/haproxy/cfg.d/listeners.cfg
+++ b/files/etc/haproxy/cfg.d/listeners.cfg
@@ -1,21 +1,23 @@
 # MANAGED VIA SALT DO NOT EDIT
 {% set settings = salt['mc_haproxy.settings']() %}
-{% for id, data in settings.listeners.items() %}
+{#- listeners can be deactivated in the pillar by setting bind to null
+ # or omitting it
+ # this is the canonical way to deactivate the stats listener
+ #}
+{% for id, data in settings.listeners.items() %}{% if data.get('bind') %}
 {% set name = data.get('name', id) %}
-listen {{name}}
+listen {{name}} {{data.bind}}
     log {{data.get('log', 'global')}}
     mode {{data.get('mode', 'http')}}
-    bind {{data.bind}}
 {% for opt in data.get('raw_opts', []) %}
-{%- for optname in ['mode', 'bind', 'log'] %} 
+{%- for optname in ['mode', 'bind', 'log'] %}
 {%- if opt.strip().startswith(optname + ' ') %}
 {%- set opt = '' %}
 {%- endif %}
 {%- endfor %}
-{% if opt %}    {{opt}}{%endif%}
+{% if opt %}    {{opt.format(**data)}}{%endif%}
 {%- endfor %}
 {% for srv in data.get('servers', []) %}
     server {{ srv.name }} {{srv.bind}} {{srv.opts-}}
 {% endfor %}
-
-{% endfor %}
+{%endif %}{% endfor %}
