--- a/files/etc/haproxy/cfg.d/backends.cfg
+++ b/files/etc/haproxy/cfg.d/backends.cfg
@@ -1,19 +1,19 @@
 # MANAGED VIA SALT DO NOT EDIT
 {% set settings = salt['mc_haproxy.settings']() %}
-{% for id, data in settings.dispatchers.items() %}
+{% for id, data in settings.backends.items() %}
 {% set name = data.get('name', id) %}
-listen {{name}} {{data.uri}}
+backend {{name}}
     log {{data.get('log', 'global')}}
-{% for opt in data.get('raw_opts', []) %}
-{%- for optname in ['log'] %} 
+    mode {{data.get('mode', 'http')}}
+{% for opt in salt['mc_haproxy.ordered_backend_opts'](data.get('raw_opts', [])) %}
+{%- for optname in ['log', 'mode'] %}
 {%- if opt.strip().startswith(optname + ' ') %}
 {%- set opt = '' %}
 {%- endif %}
 {%- endfor %}
 {%  if opt %}    {{opt}}{%endif%}
 {%- endfor %}
-{% for disp in data.uris %}
-    dispatch {{disp-}}
+{% for srv in data.get('servers', []) %}
+    server {{ srv.name }} {{srv.bind}} {{srv.opts-}}
 {% endfor %}
-
 {% endfor %}
