fix perms improvments

--- a/files/projects/2/salt/PILLAR.sample
+++ b/files/projects/2/salt/PILLAR.sample
@@ -18,6 +18,7 @@ makina-projects.projectname:
   data:
     opt: value
     password: SecretToBeChangedInsidePillar
+    fixperms_cron_periodicity: "0 */2 * * *"
   env_defaults:
     dev:
       opt: value2
