--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -224,7 +224,7 @@ CSSH:
       "--skip-stderr", "-C", "$command$",
       "--timeout=$ssh_timeout$",
       "-H", "$ssh_host$" , "-p", "$ssh_port$",
-      "-i", "$SSHKEY$", "-l", "$ssh_user$", "-q"]
+      "-i", "$SSHKEY$", "-l", "$ssh_username$", "-q"]
     import: ["C_BASE"]
 # icinga2 quoting idiosyncrasiness
 #
@@ -908,7 +908,7 @@ ST_BASE:
     flapping_threshold: "50"
     vars.other_args: ''
     vars.ssh_timeout: 60
-    vars.ssh_user: root
+    vars.ssh_username: root
     check_interval: '5m'
     retry_interval: '1m'
     check_period: 'T_24x7'
