Update phpfpm pool.conf, missing quote in rare case of custom session handler cc @kiorky

--- a/files/etc/php5/fpm/pool.d/pool.conf
+++ b/files/etc/php5/fpm/pool.d/pool.conf
@@ -320,7 +320,7 @@ php_value[session.cookie_domain]         = "{{ data.session_cookie_domain }}"
 {% endif %}
 {% if data.custom_sessions_enabled %}
 php_admin_value[session.save_handler] = {{ data.session_save_handler }}
-php_admin_value[session.save_path]    = "{{ data.session_save_path }}
+php_admin_value[session.save_path]    = "{{ data.session_save_path }}"
 {% endif %}
 
 ; SECURITY
