--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -40,6 +40,7 @@ GitPython >= 0.3.6
 ipaddr >= 2.1.11
 ipwhois >= 0.10.1
 dnspython >= 1.12.0
+python-whois-extended
 netaddr >= 0.7.13
 
 msgpack-python >= 0.4.6
@@ -51,7 +52,10 @@ pyzmq >= 14.5.0
 smmap >= 0.9.0
 snowballstemmer >= 1.2.0
 
+docker-py >= 1.7.0
+
 pyprof2calltree >= 1.3.2
 
 # ansible
 paramiko
+
