--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -1,6 +1,6 @@
 # MANAGED VIA SALT --  DO NOT EDIT
 {% set data=salt['mc_nginx.settings']() %}
-user {{data.user}};
+user {{data.user}} {{data.group}};
 worker_processes {{data.worker_processes}};
 worker_rlimit_nofile {{data.ulimit}};
 {% if data.get('no_daemon', False) %}
