--- a/etc/makina-states/database.sls.in
+++ b/etc/makina-states/database.sls.in
@@ -918,10 +918,13 @@ backup_configurations:
 # SSH configuration overrides to access hosts
 #ssh_hosts: {}
 #  vm.makina-corpus.net:
-#    ssh_gateway: xxxx.makina-corpus.net
-#    ssh_host: vm.makina-corpus.net
-#    # (opt) ssh_host: 10.5.0.2
+#    # (opt) ssh_name: vm.makina-corpus.net
+#    # (opt) ssh_host: vm.makina-corpus.net
+#    # (opt) ssh_username: root
+#    # (opt) ssh_sudo: none/true/false
+#    # (opt) ssh_key: '/root/.ssh/id_rsa'
+#    # (opt) ssh_gateway: "host:22"
+#    # (opt) ssh_gateway_user: root
 #    # (opt) ssh_gateway_port: 22
 #    # (opt) ssh_gateway_key: '/root/.ssh/id_rsa'
-#    # (opt) ssh_username: root
 # vim: set ft=yaml sts=2 ts=2 ai et:
