continue ansible integration

--- a/ansible/roles/makinastates/defaults/main.yml
+++ b/ansible/roles/makinastates/defaults/main.yml
@@ -1,8 +1,7 @@
 ---
 # defaults file for makina-states
-makinastates:
-  dest: "/srv/makina-states"
-  version: "v2"
-  nodetype: "scratch"
-  repo: "https://github.com/makinacorpus/makina-states.git"
-salt_pillar: {empty: false}
+makinastates_dest: "/srv/makina-states"
+makinastates_version: "v2"
+makinastates_nodetype: "scratch"
+akinastates_repo: "https://github.com/makinacorpus/makina-states.git"
+salt_pillar: {"makinastates_from_ansible": true}
