--- a/ansible/roles/makinastates_vars/defaults/main.yml
+++ b/ansible/roles/makinastates_vars/defaults/main.yml
@@ -1,12 +1,12 @@
 ---
 # defaults file for makina-states
+makinastates_repo: "https://github.com/makinacorpus/makina-states.git"
+makinastates_version: "v2"
 makinastates_dest: "/srv/makina-states"
 makinastates_ansible_repo: null
 makinastates_ansible_version: null
 makinastates_salt_repo: null
 makinastates_salt_version: null
-makinastates_repo: null
-makinastates_version: null
 makinastates_nodetype: null
 makinastates_force_highstate: null
 salt_pillar: {"makinastates_from_ansible": true}
