PHP-fpm: xdebug support for remote_enable and remote_host

--- a/files/etc/php5/fpm/pool.d/pool.conf
+++ b/files/etc/php5/fpm/pool.d/pool.conf
@@ -445,6 +445,8 @@ php_admin_value[xdebug.default_enable]          = {{ data. xdebug_enabled }};
 php_admin_value[xdebug.collect_params]          = {{ data.xdebug_collect_params }};
 php_admin_value[xdebug.profiler_enable]         = {{ data.xdebug_profiler_enable }};
 php_admin_value[xdebug.profiler_enable_trigger] = {{ data.xdebug_profiler_enable_trigger }};
+php_admin_value[xdebug.remote_enable] = {{ data.xdebug_remote_enable }};
+php_admin_value[xdebug.remote_host] = "{{ data.xdebug_remote_host }}";
 php_admin_value[xdebug.profiler_output_name]    =  "{{ data.xdebug_profiler_output_name }}";
 {% endif %}
 
