--- a/etc/salt/minion.d/00_global.conf
+++ b/etc/salt/minion.d/00_global.conf
@@ -28,8 +28,10 @@ file_roots:
     - /srv/salt
 pillar_roots:
   base:
+    - /srv/makina-states/pillar/overrides/private.pillar.d
     - /srv/makina-states/pillar/overrides/pillar.d
     - /srv/makina-states/pillar/overrides
+    - /srv/makina-states/pillar/private.pillar.d
     - /srv/makina-states/pillar/pillar.d
     - /srv/makina-states/pillar
     - /srv/pillar
@@ -453,6 +455,7 @@ hash_type: md5
 
 ext_pillar:
     - mc_pillar: {}
+    - mc_pillar_jsons: {}
 
 # The pillar_opts option adds the master configuration file data to a dict in
 # the pillar called "master". This is used to set simple configurations in the
